--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: edge_detection_scan
 description: "A new Flutter project."
 version: 0.0.1
-homepage:
+repository: https://github.com/git-rns/edge_detection_scan
 
 environment:
   sdk: ^3.8.1
